# pearlkeeper-client

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  prl-wallet-pubkey.pub
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  security-report.md
apps/desktop/: .env.production  .eslintrc.cjs  CHANGELOG.md  README.md  index.html  package.json  package.json.dummy  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  HydrationGate.tsx  KeychainUnavailableScreen.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  UPDATER-KEY.md  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: README.md  mitmproxy-NET-07.sh  mitmproxy-net07-assert.py
apps/desktop/src-tauri/src/: attestation.rs  lib.rs  main.rs  network_gate.rs  secrets.rs  storage.rs
apps/desktop/src-tauri/tests/: attestation_roundtrip.rs  network_gate.rs  secrets_roundtrip.rs
apps/mobile/: .env.example  .env.production  .eslintrc.js  .gitignore  App.tsx  app.json  index.js  jest.config.js  jest.setup.ts  metro.config.js  package.json  setup-globals.js  tsconfig.json
apps/mobile/android/: build.gradle  gradlew  gradlew.bat  keystore.properties.example  settings.gradle
apps/mobile/ci/: README.md  push-build-number-tag.sh  write-build-manifest.ts
apps/mobile/fastlane/: Appfile  Fastfile  README.md
apps/mobile/ios/: Podfile
scripts/: check-packages-clean.sh  lint-analytics-schema.sh
(+279 files in other folders)
