[package]
name = "prl-wallet-desktop"
version = "1.3.24"
description = "Pearl Keeper desktop app"
authors = ["PRL Foundation"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "prl_wallet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-window-state = "2"
tempfile = "3"
thiserror = "1"
ed25519-dalek = { version = "2.2", default-features = false, features = ["rand_core", "std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[profile.release]
strip = "symbols"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
tempfile = "3"

[[test]]
name = "secrets_roundtrip"
path = "tests/secrets_roundtrip.rs"

[[test]]
name = "network_gate"
path = "tests/network_gate.rs"

[[test]]
name = "attestation_roundtrip"
path = "tests/attestation_roundtrip.rs"
